<resources>
    <string name="app_name">GARK</string>
    <string name="login">Login</string>
    <string name="about">ABOUT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="registerQuery">Don\'t have an account?</string>
    <string name="regService">Register Now As A Service Provider</string>
    <string name="regCustomer">Register Now As A Customer</string>
    <string name="title_activity_register_service">registerService</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loginEmail">E-mail</string>
    <string name="loginPassword">Password</string>
</resources>