<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/testId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_activity"
    tools:context=".LogIn">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="146dp"
        android:layout_height="0dp"
        android:layout_marginTop="71dp"
        android:layout_marginBottom="34dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/usernameLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/verticallogo" />

    <Button

        android:id="@+id/loginBtn2"
        style="@style/MyButtonStyle3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="#E3BA12"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/forgotPassword"
        app:layout_constraintStart_toStartOf="@+id/usernameLogin"
        app:layout_constraintTop_toBottomOf="@+id/usernameLogin" />

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:background="#E3BA12"
        android:ems="10"
        android:hint="Username"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passwordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="19dp"
        android:text="@string/registerQuery"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/regService"
        app:layout_constraintStart_toStartOf="@+id/regService"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn2" />

    <TextView
        android:id="@+id/regService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:text="@string/regService"
        android:textColor="#2E3192"
        app:layout_constraintBottom_toTopOf="@+id/regCustomer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/regCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="141dp"
        android:clickable="true"
        android:text="@string/regCustomer"
        android:textColor="#2E3192"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/regService"
        app:layout_constraintTop_toBottomOf="@+id/regService" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="32dp"
        android:text="@string/forgotPassword"
        android:textColor="#2E3192"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn2"
        app:layout_constraintEnd_toEndOf="@+id/passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="32dp"
        android:text="test again"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>